spandsp: Don't use the private field 'missing_samples'

https://bugzilla.gnome.org/show_bug.cgi?id=748497